# telegram-ai-core

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  VARIABLES.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
.cursor/: cloud-agent.Dockerfile  environment.json
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_app_settings.py  0003_user_agent_settings.py  0004_agent_modes.py  0005_active_conversation_history_indexes.py  0006_eth_portfolio_digest_alerts.py  0007_memories.py  (+4 more)
app/: __init__.py  config.py  logging_config.py  main.py
scripts/: entrypoint.railway.sh  entrypoint.sh  railway-bind.sh  railway_diagnose.py  wait-for-services.py
tests/: test_access_control.py  test_admin_filter.py  test_agent_mode_routing.py  test_agent_modes.py  test_agents.py  test_alembic_revision_ids.py  test_config_resolver.py  test_context_builder_agent_prompt.py  test_context_builder_memory.py  test_debug_command.py  test_memories.py  test_memories_portfolio.py  test_message_pipeline_safety.py  test_models.py  test_openrouter_streaming.py  test_orchestrator_openrouter_env.py  test_orchestrator_user_agent_model.py  test_portfolio_merge.py  test_portfolio_pnl.py  test_price_provider.py  test_secret_material.py  test_sensitive_guard.py  test_sensitive_message_guard.py  test_settings_model_labels.py  test_settings_store.py  test_skills.py  test_stage4_features.py  test_stage5_notifications.py  test_streaming_fix.py  test_telegram_webhook_http.py  test_text_splitter.py  test_usage_limits.py  test_user_agent_settings_service.py  test_webhook.py
(+91 files in other folders)
