[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-ai-core"
version = "0.1.0"
description = "Telegram AI Chat Core: aiogram 3 + FastAPI + OpenRouter streaming, agents/skills/models registries, PostgreSQL/Redis."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Telegram AI Core" }]

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "aiogram>=3.13,<4.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "redis>=5.0,<6.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "python-dotenv>=1.0,<2.0",
    "python-json-logger>=2.0,<4.0",
    "cryptography>=42,<46",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "aiosqlite>=0.20,<1.0",
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["app*"] } }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
